--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,9 @@
     "version": "0.2",
     "content_scripts" : [
       {
-        "matches": ["https://github.com/*/pull/*/files"],
-        "js": ["jquery-2.1.3.min.js", "pr-favors.js"]
+        "matches": ["https://github.com/*/pull/*"],
+        "js": ["jquery-2.1.3.min.js", "pr-favors.js"],
+        "run_at": "document_end"
       }
     ]
 }
