Reorder files in 'compare' view as well'

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,13 @@
 {
     "manifest_version": 2,
     "name": "Pull Favors",
-    "version": "0.3",
+    "version": "0.3.1",
     "content_scripts" : [
       {
-        "matches": ["https://github.com/*/pull/*"],
+        "matches": [
+          "https://github.com/*/pull/*",
+          "https://github.com/*/compare/*"
+          ],
         "js": ["jquery-2.1.3.min.js", "pr-favors.js"],
         "run_at": "document_end"
       }
