--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,9 @@
 {
     "manifest_version": 2,
     "name": "Pull Favors",
-    "version": "0.3.1",
+    "short_name": "GitHub Pull-Request Beautifier",
+    "description": "GitHub Pull-Request Beautifier",
+    "version": "0.4",
     "content_scripts" : [
       {
         "matches": [
